# virus-one

./: .gitmodules  LICENSE  README.md
api/: Gruntfile.js  app.js  package.json
api/app/controllers/: environment.js  grow-module.js  home.js  plant.js  strain.js
api/app/models/: environment.js  grow-module.js  nutrient.js  plant.js  sensor.js  strain.js  user.js  watering.js
api/config/: config.js
data/: .gitignore  start
fe/: Gruntfile.js  README.md  bower.json  package.json
fe/app/: index.html
fe/app/less/: virusone-main.less  (+2 more)
fe/test/: karma.conf.js
system/: README.md  build  clean
system/libvirus/: .gitignore  CMakeLists.txt  LICENSE  README.md  libvirus.kdev4
system/libvirus/.kdev4/: libvirus.kdev4
system/libvirus/include/: virus_address_ipv4.h  virus_exception.h  virus_host.h  virus_log.h  virus_macros.h  virus_pollable.h  virus_pollgroup.h  virus_port_number.h  virus_sensor.h  virus_sensor_temperature_simulator.h  virus_socket.h  virus_socket_pollgroup.h  virus_stream.h  virus_timestamp.h
system/libvirus/include/virusone/: macros.h
system/libvirus/include/virusone/network/: address_ipv4.h  host.h  host_address.h  port_number.h  socket.h
system/libvirus/include/virusone/services/: log.h  pollgroup.h  smoothed_value.h  timestamp.h  uuid.h
system/libvirus/include/virusone/system/: exception.h  pollable.h  stream.h
system/libvirus/src/: virus_address_ipv4.cpp  virus_exception.cpp  virus_host.cpp  virus_pollable.cpp  virus_pollgroup.cpp  virus_port_number.cpp  virus_sensor.cpp  virus_sensor_temperature_simulator.cpp  virus_socket.cpp  virus_stream.cpp  virus_timestamp.cpp
system/libvirus/src/network/: address_ipv4.cpp  host.cpp  host_address.cpp  port_number.cpp  socket.cpp
system/libvirus/src/services/: log.cpp  pollgroup.cpp  smoothed_value.cpp  timestamp.cpp  uuid.cpp
system/libvirus/src/system/: exception.cpp  pollable.cpp  stream.cpp
system/libvirus/test/: main.cpp
system/libvirus/test/tests/: json.cpp  json.h  port_number.cpp  port_number.h  sensor_temperature_simulator.cpp
system/libvirusesp/: .gitignore  CMakeLists.txt  README.md  libvirusesp.kdev4
system/libvirusesp/.kdev4/: libvirusesp.kdev4
system/libvirusesp/include/sensors/: temperature.h  temperature_simulator.h
system/libvirusesp/include/virusesp/: device.h  environment.h  service.h  service_command.h  service_command_queue.h  service_exception.h
system/libvirusesp/include/virusesp/devices/: control.h  sensor.h
system/libvirusesp/include/virusesp/devices/controls/: analog.h  switch.h
system/libvirusesp/include/virusesp/devices/sensors/: temperature.h
system/libvirusesp/src/: device.cpp  environment.cpp  service.cpp  service_exception.cpp
system/libvirusesp/src/devices/: control.cpp
system/libvirusesp/src/devices/sensors/: temperature.cpp
system/libvirusesp/src/sensors/: temperature.cpp
system/libvirusgui/: CMakeLists.txt  libvirusgui.kdev4
system/libvirusgui/include/virusone-gui/core/: panel.h  window.h
system/libvirusgui/src/core/: panel.cpp  window.cpp
system/libvirustest/: .gitignore  CMakeLists.txt  README.md  libvirustest.kdev4
system/libvirustest/.kdev4/: libvirustest.kdev4
system/libvirustest/include/: virustest_controller.h  virustest_environment.h  virustest_exception.h  virustest_experiment.h  virustest_suite.h
system/libvirustest/include/virustest/: controller.h  exception.h  experiment.h  system.h  test_exception.h
system/libvirustest/src/: controller.cpp  environment.cpp  experiment.cpp  suite.cpp  system.cpp  test_exception.cpp  virustest_controller.cpp  virustest_environment.cpp  virustest_experiment.cpp  virustest_suite.cpp  virustest_system.cpp
system/virusd/: CMakeLists.txt  main.cpp  virusd.kdev4
system/virusd/.kdev4/: virusd.kdev4
system/virusd/src/: virusd.cpp
system/virusone-monitor/: CMakeLists.txt  virusone-monitor.kdev4
system/virusone-monitor/.kdev4/: virusmon.kdev4  virusone-monitor.kdev4
system/virusone-monitor/src/: virusone-monitor.cpp
system/virustest/: .gitignore  CMakeLists.txt  virustest.kdev4
system/virustest/.kdev4/: virustest.kdev4
system/virustest/include/experiments/: json_parse.h  json_write.h
system/virustest/include/suites/: json.h  network.h  system.h
system/virustest/include/virusone-test/controllers/network/: port_number.h
system/virustest/include/virusone-test/controllers/vendors/: rapidjson.h
system/virustest/include/virusone-test/experiments/json/: parse.h  write.h
system/virustest/include/virusone-test/experiments/network/port_number/: assign.h  equality.h  greater_than.h  inequality.h  less_than.h
system/virustest/include/virusone-test/experiments/system/: pollgroup.h
system/virustest/include/virusone-test/experiments/vendors/rapidjson/: parse.h  write.h
system/virustest/include/virusone-test/simulators/: temperature.h
system/virustest/include/virusone-test/suites/: json.h  network.h  system.h
system/virustest/include/virusone-test/suites/vendors/: rapidjson.h
system/virustest/include/virustest/controllers/network/: port_number.h
system/virustest/include/virustest/experiments/json/: parse.h  write.h
system/virustest/include/virustest/experiments/network/port_number/: assign.h  equality.h  inequality.h  less_than.h
system/virustest/include/virustest/experiments/system/: pollgroup.h
system/virustest/include/virustest/suites/: json.h
system/virustest/src/: main.cpp  virusone-test.cpp
system/virustest/src/controllers/network/: port_number.cpp
system/virustest/src/controllers/vendors/: rapidjson.cpp
system/virustest/src/experiments/: json_parse.cpp  json_write.cpp  pollgroup.cpp
system/virustest/src/experiments/json/: parse.cpp  write.cpp
system/virustest/src/experiments/network/port_number/: assign.cpp  equality.cpp  inequality.cpp
system/virustest/src/experiments/system/: pollgroup.cpp
system/virustest/src/experiments/vendors/rapidjson/: parse.cpp  write.cpp
system/virustest/src/simulators/: temperature.cpp
system/virustest/src/suites/: json.cpp  network.cpp  system.cpp
system/virustest/src/suites/vendors/: rapidjson.cpp
(+54 files in other folders)
